# nomad-log

./: .gitignore  .gitmodules  Makefile  README.md  server.cpp  server.h
backend/: .clang-format  CMakeLists.txt  main.cpp  server.cpp  server.h
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Calendar.css  Calendar.jsx
